--- a/01_java/bin/.gitignore
+++ b/01_java/bin/.gitignore
@@ -1,3 +1,34 @@
-/exam/
+/ch01_basic/
+/ChoiceStudentQuiz.class
+/ChoiceTeam.class
+/Exam.class
+/Happy.class
+/ch00_algorithm/
+/ch02_operator/
+/ch03_condition/
+/ch04_repetition/
+/ch05_datatype/
+/ch06_array/
+/ch07_class/
+/ch08_method/
+/ch09_string/
+/ch10_scanfile/
+/ch11_datastruct/
+/ch12_constructor/
+/ch13_static/
+/ch14_extend/
+/ch15_casting/
+/ch16_abstractclass/
+/ch17_interface/
+/ch18_exception/
+/ch19_inner_final/
+/ch20_lamda/
+/ch21_date/
+/ch22_collection/
+/ch22_collection01/
 /ch22_collection02/
 /ch22_collection03/
+/exam/
+/star/
+/ch23_io/
+/Test02.class
