--- a/01_java/bin/.gitignore
+++ b/01_java/bin/.gitignore
@@ -1,17 +1,9 @@
-/ChoiceStudentQuiz.class
-/ChoiceTeam.class
-/Exam.class
-/Happy.class
-/Test02.class
-/ch00_algorithm/
 /ch01_basic/
 /ch02_operator/
 /ch03_condition/
-/ch04_repetition/
 /ch05_datatype/
 /ch06_array/
 /ch07_class/
-/ch08_method/
 /ch09_string/
 /ch10_scanfile/
 /ch11_datastruct/
@@ -19,16 +11,25 @@
 /ch13_static/
 /ch14_extend/
 /ch15_casting/
+/ch19_inner_final/
+/ch20_lamda/
+/ch22_collection/
+/ch22_collection01/
+/ch24_totalexam/
+/exam/
+/star/
+/ChoiceStudentQuiz.class
+/ChoiceTeam.class
+/Exam.class
+/Happy.class
+/Test02.class
+/ch00_algorithm/
+/ch04_repetition/
+/ch08_method/
 /ch16_abstractclass/
 /ch17_interface/
 /ch18_exception/
-/ch19_inner_final/
-/ch20_lamda/
 /ch21_date/
-/ch22_collection/
-/ch22_collection01/
 /ch22_collection02/
 /ch22_collection03/
 /ch23_io/
-/exam/
-/star/
